# rp2040-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
